--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,11 @@
             <artifactId>de.flapdoodle.embed.mongo</artifactId>
             <version>2.0.0</version>
         </dependency>
+	<dependency>
+   		<groupId>javax.xml.parsers</groupId>
+   		<artifactId>aixport</artifactId>
+   		<version>1.3.1</version>
+	</dependency>
     </dependencies>
 
     <build>
@@ -159,16 +164,18 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
+                <version>3.0.0-M1</version>
+		<configuration>
+		   <testFailureIgnore>true</testFailureIgnore>
+		   <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                     <forkCount>3</forkCount>
                     <reuseForks>true</reuseForks>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.8.1</version>
                     <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
